--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "@mui/base": "^5.0.0-beta.40",
     "@reduxjs/toolkit": "^2.2.2",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.41.1",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
