--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "@mui/base": "^5.0.0-beta.40",
+    "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^2.2.2",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.41.1",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
+    "prisma": "^5.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^10.0.5",
