--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^2.2.2",
     "autoprefixer": "10.4.17",
+    "bcrypt": "^5.1.1",
     "geist": "^1.2.1",
     "next": "latest",
+    "next-auth": "^5.0.0-beta.16",
     "postcss": "8.4.33",
-    "prisma": "^5.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "tailwindcss": "3.4.1",
@@ -26,6 +28,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "prisma": "^5.12.1"
   }
 }
