--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://michael:Michael@1@chat-app.g7lrrbs.mongodb.net/"
+DATABASE_URL="mongodb+srv://michael:uWDKkELaVmnH2JTp@chat-app.g7lrrbs.mongodb.net/chat-app"
 RANDOM_USER_API_KEY="a9b232b5aemsh13fdbd1f88705cap1a7007jsndb9fd6f25d0b"
+AUTH_SECRET="e/oOEBLpjl5pI9efJeOOWpWZfVZWlybRMnnEOFDxti4="
