--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 DATABASE_URL="mongodb+srv://michael:uWDKkELaVmnH2JTp@chat-app.g7lrrbs.mongodb.net/chat-app"
 RANDOM_USER_API_KEY="a9b232b5aemsh13fdbd1f88705cap1a7007jsndb9fd6f25d0b"
 AUTH_SECRET="e/oOEBLpjl5pI9efJeOOWpWZfVZWlybRMnnEOFDxti4="
+BASE_URL="http://localhost:3000"
