--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@reduxjs/toolkit": "^2.2.2",
     "autoprefixer": "10.4.17",
     "bcrypt": "^5.1.1",
+    "bip39": "^3.1.0",
     "geist": "^1.2.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "latest",
     "next-auth": "^5.0.0-beta.16",
     "postcss": "8.4.33",
@@ -20,6 +22,8 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "uuid": "^9.0.1"
@@ -29,6 +33,6 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "encoding": "^0.1.13",
-    "prisma": "^5.12.1"
+    "prisma": "^5.21.1"
   }
 }
