--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@mui/base": "^5.0.0-beta.40",
     "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "@simplewebauthn/browser": "^9.0.1",
+    "@simplewebauthn/server": "^9.0.3",
     "autoprefixer": "10.4.17",
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
     "geist": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
     "next": "latest",
     "next-auth": "^5.0.0-beta.16",
     "postcss": "8.4.33",
+    "pusher": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^9.1.0",
