--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@mui/base": "^5.0.0-beta.40",
     "@prisma/client": "^5.12.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@simplewebauthn/browser": "^9.0.1",
     "@simplewebauthn/server": "^9.0.3",
+    "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.17",
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
@@ -29,8 +31,7 @@
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "uuid": "^9.0.1"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
